@@ -88,11 +88,11 @@ cbrtq ( __float128 x)
 
   /* Approximate cube root of number between .5 and 1,
      peak relative error = 1.2e-6  */
-  x = ((((1.3584464340920900529734e-1L * x
-	  - 6.3986917220457538402318e-1L) * x
-	 + 1.2875551670318751538055e0L) * x
-	- 1.4897083391357284957891e0L) * x
-       + 1.3304961236013647092521e0L) * x + 3.7568280825958912391243e-1L;
+  x = ((((1.3584464340920900529734e-1Q * x
+	  - 6.3986917220457538402318e-1Q) * x
+	 + 1.2875551670318751538055e0Q) * x
+	- 1.4897083391357284957891e0Q) * x
+       + 1.3304961236013647092521e0Q) * x + 3.7568280825958912391243e-1Q;
 
   /* exponent divided by 3 */
   if (e >= 0)
@@ -122,9 +122,9 @@ cbrtq ( __float128 x)
   x = ldexpq (x, e);
 
   /* Newton iteration */
-  x -= (x - (z / (x * x))) * 0.3333333333333333333333333333333333333333L;
-  x -= (x - (z / (x * x))) * 0.3333333333333333333333333333333333333333L;
-  x -= (x - (z / (x * x))) * 0.3333333333333333333333333333333333333333L;
+  x -= (x - (z / (x * x))) * 0.3333333333333333333333333333333333333333Q;
+  x -= (x - (z / (x * x))) * 0.3333333333333333333333333333333333333333Q;
+  x -= (x - (z / (x * x))) * 0.3333333333333333333333333333333333333333Q;
 
   if (sign < 0)
     x = -x;
