@@ -1,3 +1,10 @@
+2012-12-13  Jakub Jelinek  <jakub@redhat.com>
+
+	* math/cbrtq.c (cbrtq): Use Q suffixed floating point constants
+	instead of L suffixed ones.
+	* math/fmaq.c (fmaq): Likewise.
+	* math/rintq.c (TWO112): Likewise.
+
 2012-12-03  Tobias Burnus  <burnus@net-b.de>
 
 	* strtod/strtod_l.c (___STRTOF_INTERNAL): Fix exponent
